# grex_utils

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
grex_utils/: io.py
tests/: test_grex_utils.py
