[tool.poetry]
name = "grex_utils"
version = "0.1.0"
description = "A set of common tools for the GReX Telescope"
authors = [
    "Liam Connor <lconnor@caltech.edu>",
    "Kiran Shila <me@kiranshila.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
xarray = { extras = ["complete"], version = "^2024.2.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
